--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -42,8 +42,8 @@
    "source": [
     "## Target audience\n",
     "\n",
-    "The content of this tutorial suits experienced users of GROMACS.\n"
-    "Such users should be familiar with basic theory behind MD simulations, along with setting them up and running them in GROMACS.\n"
+    "The content of this tutorial suits experienced users of GROMACS.\n",
+    "Such users should be familiar with basic theory behind MD simulations, along with setting them up and running them in GROMACS.\n",
     "\n",
     "## Prerequisites\n",
     " \n",
